@@ -1,3 +1,9 @@
+2007-11-06  David Bateman  <dbateman@free.fr>
+
+	* linear-algebra/__norm__.m: Scale frobenius norm by infinity norm
+	to avoid issues of over- and underflow.  From Rolf Fabian
+	<Rolf.Fabian@gmx.de>.
+
 2007-11-02  Olli Saarela  <Olli.Saarela@kcl.fi>
 
 	* time/asctime.m, general/structfun.m: Fix broken @examples in
